--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node backend/index.js",
+    "start": "node backend/index.js",
     "dev": "nodemon backend/index.js",
     "build": "npm install && cd frontend && npm install && npm run build"
   },
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "express": "^4.21.2",
     "socket.io": "^4.8.1"
   },
